--- a/train.html
+++ b/train.html
@@ -263,29 +263,29 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<i class="train-icon fa fa-train"></i>
 	</div>
 	<div class="col-md-5 bann-info">
-		<h3>Search for Trains</h3>
+		<h3>Reserver votre prochain voyage en train</h3>
         <div class="book-a-ticket">
 							<div class=" bann-info">
 								<form action="trains-list.html" method="post">
 									<div class="ban-top">
 										<div class="bnr-left">
-											<label class="inputLabel">From:</label>
+											<label class="inputLabel">de:</label>
 											<input class="city" type="text" placeholder="Enter a city or local area" required="required" />
 										</div>
 										
 										<div class="bnr-left">
-											<label class="inputLabel">To:</label>
+											<label class="inputLabel">à:</label>
 											<input class="city" type="text" placeholder="Enter a city or local area" required="required" />
 										</div>
 											<div class="clearfix"></div>
 									</div>
 									 <div class="ban-bottom">
 											<div class="bnr-right">
-												<label class="inputLabel">Date of Journey:</label>
+												<label class="inputLabel">Date de départ:</label>
 				<input class="date" id="datepicker" type="text" placeholder="dd-mm-yyyy"  required="required" />
 											</div>
 											<div class="bnr-right">
-												<label class="inputLabel">Date of Return<span class="opt">&nbsp;(Optional):</span></label>
+												<label class="inputLabel">Date de retour<span class="opt">&nbsp;(Optionel):</span></label>
 				<input class="date" id="datepicker1" type="text" placeholder="dd-mm-yyyy" />
 											</div>
 												<div class="clearfix"></div>
