--- a/bus.html
+++ b/bus.html
@@ -262,7 +262,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<i class="train-icon fa fa-bus"></i>
 	</div>
          <div class="col-md-5 bann-info">
-		<h3>Reservez votre billet de bus</h3>
+		<h3>Billet de bus</h3>
         <div class="book-a-ticket">
 							<div class=" bann-info">
 								<form action="bus-list.html" method="post">
@@ -299,7 +299,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 											<!-- /End-date-piker -->
 										</div>
 									<div class="search">
-									     <input type="submit" class="submit" value="Search">
+									     <input type="submit" class="submit" value="Chercher">
 									
 									</div>
 								</form>
