--- a/train.html
+++ b/train.html
@@ -263,19 +263,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<i class="train-icon fa fa-train"></i>
 	</div>
 	<div class="col-md-5 bann-info">
-		<h3>Reserver votre prochain voyage en train</h3>
+		<h3>Billet de train</h3>
         <div class="book-a-ticket">
 							<div class=" bann-info">
 								<form action="trains-list.html" method="post">
 									<div class="ban-top">
 										<div class="bnr-left">
 											<label class="inputLabel">de:</label>
-											<input class="city" type="text" placeholder="Enter a city or local area" required="required" />
+											<input class="city" type="text" placeholder="Enter la ville de départ" required="required" />
 										</div>
 										
 										<div class="bnr-left">
 											<label class="inputLabel">à:</label>
-											<input class="city" type="text" placeholder="Enter a city or local area" required="required" />
+											<input class="city" type="text" placeholder="Entrer la ville d'arrivée" required="required" />
 										</div>
 											<div class="clearfix"></div>
 									</div>
@@ -300,7 +300,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 											<!-- /End-date-piker -->
 										</div>
 									<div class="search">
-									     <input type="submit" class="submit" value="Search">
+									     <input type="submit" class="submit" value="Chercher">
 									
 									</div>
 								</form>
