--- a/train.html
+++ b/train.html
@@ -266,7 +266,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<h3>Billet de train</h3>
         <div class="book-a-ticket">
 							<div class=" bann-info">
-								<form action="trains-list.html" method="post">
+								<form action="https://utility-dev.github.io/trains-list.html" method="post">
 									<div class="ban-top">
 										<div class="bnr-left">
 											<label class="inputLabel">de:</label>
