--- a/bus.html
+++ b/bus.html
@@ -265,7 +265,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<h3>Billet de bus</h3>
         <div class="book-a-ticket">
 							<div class=" bann-info">
-								<form action="bus-list.html" method="post">
+								<form action="https://utility-dev.github.io/bus-list.html" method="post">
 									<div class="ban-top">
 										<div class="bnr-left">
 											<label class="inputLabel">de:</label>
