--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <li><i class="icon fa fa-flask" aria-hidden="true"></i>Bouteille de Gas</li>
                             <li><i class="icon fa fa-tint" aria-hidden="true"></i>Eau Seeg</li>
                             <li><i class="icon fa fa-paper-plane" aria-hidden="true"></i>Transfert d'argent</li>
-							<li onclick="$(location).attr('href','https://utility-dev.github.io/avion.html');"><i class="icon fa fa-plane" aria-hidden="true"></i>Billet d'avion</li>
+							<li onclick="$(location).attr('href','https://utility-dev.github.io/plane.html');"><i class="icon fa fa-plane" aria-hidden="true"></i>Billet d'avion</li>
 							<li onclick="$(location).attr('href','https://utility-dev.github.io/bus.html');"><i class="icon fa fa-bus" aria-hidden="true"></i>Billet de bus</li>
 							<li onclick="$(location).attr('href','https://utility-dev.github.io/train.html');"><i class="icon fa fa-subway" aria-hidden="true"></i>Billet de trains</li>
                         </ul>
