--- a/plane.html
+++ b/plane.html
@@ -260,7 +260,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="agile-trains w3layouts-content">
      <div class="container">
 	<div class="col-md-4 bann-info1">
-		<i class="train-icon fa fa-train"></i>
+		<i class="train-icon fa fa-plane"></i>
 	</div>
 	<div class="col-md-5 bann-info">
 		<h3>Billet d'avion</h3>
