--- a/train.html
+++ b/train.html
@@ -288,6 +288,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <script src="js/connexion.js"></script>
     <script src="js/validConnexionForm.js"></script>
     <script src="js/forgotPassword.js"></script>
+    <link rel="stylesheet" href="css/jqui.css">
 
 </head>
 <!-- //head -->
