--- a/plane.html
+++ b/plane.html
@@ -516,12 +516,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<div class="ban-top">
 										<div class="bnr-left">
 											<label class="inputLabel">de:</label>
-											<input class="city" type="text" placeholder="Enter la ville de départ" required="required" />
+											<input class="city tags" type="text" placeholder="Enter la ville de départ" required="required" />
 										</div>
 										
 										<div class="bnr-left">
 											<label class="inputLabel">à:</label>
-											<input class="city" type="text" placeholder="Entrer la ville d'arrivée" required="required" />
+											<input class="city tags" type="text" placeholder="Entrer la ville d'arrivée" required="required" />
 										</div>
 											<div class="clearfix"></div>
 									</div>
