--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <script src="js/connexion.js"></script>
     <script src="js/validConnexionForm.js"></script>
     <script src="js/forgotPassword.js"></script>
+    <script src="css/jqui.css"></script>
 
 </head>
 <!-- //head -->
@@ -615,7 +616,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			    
 			     <!-- tab8 -->
                         <div>
-						<div class="login-form">
+						<div class="">
                             <i class="train-icon fa fa-plane inner-icon" aria-hidden="true"></i>
                                     <form action="https://utility-dev.github.io/trains-list.html" method="post">
 									<div class="ban-top">
