--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <script src="js/connexion.js"></script>
     <script src="js/validConnexionForm.js"></script>
     <script src="js/forgotPassword.js"></script>
-    <script src="css/jqui.css"></script>
+    <link rel="stylesheet" href="css/jqui.css">
 
 </head>
 <!-- //head -->
@@ -84,7 +84,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                         <li><a href="#Registration" data-toggle="tab" class="resetLoginForm">S'inscrire</a></li>
                                     </ul>
                                     <!-- Tab panes -->
-                                    <div class="tab-content">
+                                    <div class="">
                                         <div class="tab-pane active" id="Login">
 										<div class= "w3ls-connexionForm">
                                             <form class="form-horizontal" action="#" method="get" id="loginForm">
@@ -254,7 +254,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <div class="banner1">
                                 <div class="caption">
                                     <h3><span>Economisez</span> 500 FCFA sur tous vos bouquet canal+</h3>
-                                    <p><a href="#mobilew3layouts" class="scroll">Reabonné vous maintenant</a></p>
+                                    <p><a href="#mobilew3layouts" class="scroll">Reabonnez-vous maintenant</a></p>
                                 </div>
                             </div>
                         </li>
