--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="login-form">
                             <i class="train-icon fa fa-bus inner-icon" aria-hidden="true"></i>
                                     <form action="https://utility-dev.github.io/bus-list.html" method="post">
-									<div class="ban-top">
+									<div class="">
 										<div class="bnr-left">
 											<label class="inputLabel">de:</label>
 											<input class="city tags" type="text" placeholder="Entrez la ville de départ" required="required" />
