--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                         <li><a href="#Registration" data-toggle="tab" class="resetLoginForm">S'inscrire</a></li>
                                     </ul>
                                     <!-- Tab panes -->
-                                    <div class="">
+                                    <div class="tab-content">
                                         <div class="tab-pane active" id="Login">
 										<div class= "w3ls-connexionForm">
                                             <form class="form-horizontal" action="#" method="get" id="loginForm">
