--- a/index.html
+++ b/index.html
@@ -307,10 +307,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			    <li><i class="icon fa fa-subway" aria-hidden="true"></i>Billet de trains</li>
                         </ul>
                     </div>
-                    <div class="">
-                        <!-- tab1 resp-tabs-container hor_1-->
+                    <div class="resp-tabs-container hor_1">
+                        <!-- tab1 tabs-box-->
                         <div>
-                            <div class="tabs-box">
+                            <div class="">
                                 <img src="images/mobile.png" class="w3ls-mobile" alt="" data-pin-nopin="true">
                                 <div class="clearfix"> </div>
                                 <div class="tab-grids">
