--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										</form>
 										<div class="bnr-left">
 											<label class="inputLabel">de:</label>
-											<input class="city tags" type="text" placeholder="Enter la ville de départ" required="required" />
+											<input id="myInput" class="city autocomplete" type="text" placeholder="Enter la ville de départ" required="required" />
 										</div>
 										
 										<div class="bnr-left">
