--- a/index.html
+++ b/index.html
@@ -626,9 +626,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 											  </div>
 											  <input type="submit">
 										</form>
-										<div class="bnr-left">
+										<div class="bnr-left autocomplete">
 											<label class="inputLabel">de:</label>
-											<input id="myInput" class="city autocomplete" type="text" placeholder="Enter la ville de départ" required="required" />
+											<input id="myInput" class="city" type="text" placeholder="Enter la ville de départ" required="required" />
 										</div>
 										
 										<div class="bnr-left">
