--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <div class="tab-grids">
                                     <div id="tab1" class="tab-grid">
                                         <div class="login-form">
-                                            <form action="https://utility-dev.github.io/pay.html" method="post" id="signup">
+                                            <form action="pay.html" method="post" id="signup">
                                                 <ol>
                                                     <li>
                                                         <h4>Entrer Votre Numéro de téléphone</h4>
@@ -382,9 +382,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                                     <option data-tokens="3000">3000</option>
                                                                 </select>
                                                             </div>
-                                                            <div class="mobile-rchge">
+                                                            <!--<div class="mobile-rchge">
                                                                 <a href="#">Voir les promotions</a>
-                                                            </div>
+                                                            </div>-->
                                                             <div class="clearfix"></div>
                                                         </div>
                                                     </li>
@@ -422,8 +422,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div>
                             <div class="login-form">
                                 <i class="train-icon fa fa-television inner-icon" aria-hidden="true"></i>
-                                <form action="https://utility-dev.github.io/pay.html" method="post" id="signup">
-
+                                <form action="pay.html" method="post" id="signup">
                                     <ol>
                                         <li>
                                             <h4>Entrer Votre Code</h4>
@@ -455,7 +454,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div>
 							<div class="login-form">
                                         <i class="train-icon fa fa-lightbulb-o inner-icon" aria-hidden="true"></i>
-                                                <form action="https://utility-dev.github.io/pay.html" method="post" id="signup">
+                                                <form action="pay.html" method="post" id="signup">
                                                     <ol>
                                                         <li>
                                                             <h4>Entrer Votre Numéro de compteur</h4>
@@ -479,8 +478,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                         </li>
                                                     </ol>
                                                 </form>
-
-
                                         </div>
 								</div>
                         <!-- /tab3 -->
@@ -489,7 +486,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div>
 						<div class="login-form">
                             <i class="train-icon fa fa-connectdevelop inner-icon" aria-hidden="true"></i>
-                                    <form action="https://utility-dev.github.io/pay.html" method="post" id="signup">
+                                    <form action="pay.html" method="post" id="signup">
                                         <ol>
                                             <li>
                                                 <h4>Entrer Votre Numéro Client</h4>
@@ -522,8 +519,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div>
 							<div class="login-form">
                             <i class="train-icon fa fa-flask inner-icon" aria-hidden="true"></i>
-                                
-                                    <form action="https://utility-dev.github.io/pay.html" method="post" id="signup">
+                                    <form action="pay.html" method="post" id="signup">
                                         <ol>
                                             <li>
                                                 <h4>Selectionner le Nombre de bouteilles que vous souhaitiez payer?</h4>
@@ -560,7 +556,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div>
 						 <div class="login-form">
                             <i class="train-icon fa fa-tint inner-icon" aria-hidden="true"></i>
-                                    <form action="https://utility-dev.github.io/pay.html" method="post" id="signup">
+                                    <form action="pay.html" method="post" id="signup">
                                         <ol>
                                             <li>
                                                 <h4>Entrer Votre Numéro de compteur</h4>
@@ -587,7 +583,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div>
 						<div class="login-form">
                             <i class="train-icon fa fa-paper-plane inner-icon" aria-hidden="true"></i>
-                                    <form action="https://utility-dev.github.io/pay.html" method="post" id="signup">
+                                    <form action="pay.html" method="post" id="signup">
                                         <ol>
                                             <li>
                                                 <h4>Entrer le type de compte mobile source?</h4>
@@ -653,7 +649,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div>
 						<div class="">
                             <i class="train-icon fa fa-plane inner-icon" aria-hidden="true"></i>
-                                    <form action="https://utility-dev.github.io/trains-list.html" method="post">
+                                    <form action="trains-list.html" method="post">
 									<div class="ban-top">
 										<div class="bnr-left autocomplete">
 											<label class="inputLabel">de:</label>
@@ -669,11 +665,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									 <div class="ban-bottom">
 											<div class="bnr-right">
 												<label class="inputLabel">Date de départ:</label>
-				<input class="date" id="datepicker" type="text" placeholder="dd-mm-yyyy"  required="required" />
+												<input class="date" id="datepicker" type="text" placeholder="dd-mm-yyyy"  required="required" />
 											</div>
 											<div class="bnr-right">
 												<label class="inputLabel">Date de retour<span class="opt">&nbsp;(Optionel):</span></label>
-				<input class="date" id="datepicker1" type="text" placeholder="dd-mm-yyyy" />
+												<input class="date" id="datepicker1" type="text" placeholder="dd-mm-yyyy" />
 											</div>
 												<div class="clearfix"></div>
 												<!-- start-date-piker -->
@@ -699,7 +695,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div>
 						<div class="login-form">
                             <i class="train-icon fa fa-bus inner-icon" aria-hidden="true"></i>
-                                    <form action="https://utility-dev.github.io/bus-list.html" method="post">
+                                    <form action="bus-list.html" method="post">
 									<div class="">
 										<div class="bnr-left autocomplete">
 											<label class="inputLabel">de:</label>
@@ -715,11 +711,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									 <div class="ban-bottom">
 											<div class="bnr-right">
 												<label class="inputLabel">Date de départ:</label>
-				<input class="date" id="datepicker" type="text" placeholder="dd-mm-yyyy"  required="required" />
+												<input class="date" id="datepicker3" type="text" placeholder="dd-mm-yyyy"  required="required" />
 											</div>
 											<div class="bnr-right">
 												<label class="inputLabel">Date de retour<span class="opt">&nbsp;(Optionel):</span></label>
-				<input class="date" id="datepicker1" type="text" placeholder="dd-mm-yyyy" />
+												<input class="date" id="datepicker4" type="text" placeholder="dd-mm-yyyy" />
 											</div>
 												<div class="clearfix"></div>
 												<!-- start-date-piker -->
@@ -727,7 +723,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 												<script src="js/jquery-ui.js"></script>
 													<script>
 														$(function() {
-														$( "#datepicker,#datepicker1" ).datepicker();
+														$( "#datepicker3,#datepicker4" ).datepicker();
 														});
 													</script>
 											<!-- /End-date-piker -->
@@ -746,7 +742,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div>
 						<div class="login-form">
                             <i class="train-icon fa fa-train inner-icon" aria-hidden="true"></i>
-                                    <form action="https://utility-dev.github.io/trains-list.html" method="post">
+                                    <form action="trains-list.html" method="post">
 									<div class="ban-top">
 										<div class="bnr-left autocomplete">
 											<label class="inputLabel">de:</label>
@@ -762,11 +758,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									 <div class="ban-bottom">
 											<div class="bnr-right">
 												<label class="inputLabel">Date de départ:</label>
-				<input class="date" id="datepicker" type="text" placeholder="dd-mm-yyyy"  required="required" />
+												<input class="date" id="datepicker5" type="text" placeholder="dd-mm-yyyy"  required="required" />
 											</div>
 											<div class="bnr-right">
 												<label class="inputLabel">Date de retour<span class="opt">&nbsp;(Optionel):</span></label>
-				<input class="date" id="datepicker1" type="text" placeholder="dd-mm-yyyy" />
+												<input class="date" id="datepicker6" type="text" placeholder="dd-mm-yyyy" />
 											</div>
 												<div class="clearfix"></div>
 												<!-- start-date-piker -->
@@ -774,7 +770,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 												<script src="js/jquery-ui.js"></script>
 													<script>
 														$(function() {
-														$( "#datepicker,#datepicker1" ).datepicker();
+														$( "#datepicker5,#datepicker6" ).datepicker();
 														});
 													</script>
 											<!-- /End-date-piker -->
@@ -1470,15 +1466,10 @@ $( function() {
 
         function filterFunction() {
             var input, filter;
-            alert('test');
             input = document.getElementById("tel");
-            alert(input.value);
             filter = input.value.substring(0, 2);
-            alert(filter);
             div = document.getElementById("selectOpe");
-            alert(div.value);
             opt = div.getElementsByTagName("option");
-            alert(opt.length);
             if (filter.trim() != "") {
                 for (i = 0; i < opt.length; i++) {
                     if (opt[i].value.localeCompare(filter) == 0) {
