--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 														</div>
 													</li>
                                                     <li>
-                                                        <input type="submit" class="submit" value="Recharger Maintenant" />
+                                                        <input type="submit" class="submit" value="Valider" />
                                                     </li>
                                                 </ol>
                                             </form>
@@ -444,7 +444,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 														</div>
 													</li>
                                                     <li>
-                                                        <input type="submit" class="submit" value="Recharger Maintenant" />
+                                                        <input type="submit" class="submit" value="Valider" />
                                                     </li>
                                                 </ol>
                                             </form>
@@ -629,7 +629,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                 </div>
 												
 												<div class="mobile-rchge">
-                                                    <input type="text" placeholder="identifiant paypal (email)" name="paypal" required="required" />
+                                                    <input type="text" placeholder="identifiant paypal" name="paypal" required="required" />
                                                 </div>
 												
 												<div class="mobile-rchge">
