--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <div class="agileits-tab_nav">
                         <ul class="resp-tabs-list hor_1">
                             <li><i class="icon fa fa-mobile" aria-hidden="true"></i>Services Mobicash</li>
-                            <li><i class="icon fa fa-television" aria-hidden="true"></i>Services Airtel Money</li>
+                            <li><i class="icon fa fa-mobile" aria-hidden="true"></i>Services Airtel Money</li>
                            <!-- <li><i class="icon fa fa-lightbulb-o" aria-hidden="true"></i>Electricite Edan Seeg</li>
                             <li><i class="icon fa fa-connectdevelop" aria-hidden="true"></i>Abonnement Ip9</li>
                             <li><i class="icon fa fa-flask" aria-hidden="true"></i>Bouteille de Gas</li>
