--- a/index.html
+++ b/index.html
@@ -288,32 +288,32 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <li>
                             <div class="banner1">
                                 <div class="caption">
-                                    <h3><span>Economisez</span> 500 FCFA sur tous vos bouquet canal+</h3>
-                                    <p><a href="#mobilew3layouts" class="scroll">Reabonnez-vous maintenant</a></p>
+                                    <h3><span>Services Airtel Money et Mobicash</span></h3>
+                                    <p><a href="#mobilew3layouts" class="scroll">Utiliser vos services Airtel Money et Mobicash en un click!!</a></p>
                                 </div>
                             </div>
                         </li>
                         <li>
                             <div class="banner2">
                                 <div class="caption">
-                                    <h3><span>50% off</span> on train Tickets</h3>
-                                    <p><a href="train.html">Book now</a></p>
+                                    <h3><span>Reserver</span> Vos billets de Trains</h3>
+                                    <p><a href="train.html">Plus besoin de se déplacer ni de faire la queue pour achéter vos billets</a></p>
                                 </div>
                             </div>
                         </li>
-                        <li>
+                        <!--<li>
                             <div class="banner3">
                                 <div class="caption">
                                     <h3><span>Flat Rs.200 Cash back</span>  on Movie Tickets</h3>
                                     <p><a href="movies.html">Book now</a></p>
                                 </div>
                             </div>
-                        </li>
+                        </li>-->
                         <li>
                             <div class="banner4">
                                 <div class="caption">
-                                    <h3><span>Upto Rs.125 Discount </span> & Flat 100% Money Back</h3>
-                                    <p><a href="bus.html">Book now</a></p>
+                                    <h3><span>Reserver vos billets de Bus, Car etc.</span></h3>
+                                    <p><a href="bus.html">Plus besoin de se rendre à la gare routière ni en agence pour acheter votre billet</a></p>
                                 </div>
                             </div>
                         </li>
@@ -340,6 +340,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<li><i class="icon fa fa-plane" aria-hidden="true"></i>Billet d'avion</li>
 							<li><i class="icon fa fa-bus" aria-hidden="true"></i>Billet de bus</li>
 							<li><i class="icon fa fa-subway" aria-hidden="true"></i>Billet de trains</li>
+							<li><i class="icon fa fa-subway" aria-hidden="true"></i>Billet de bateau</li>
                         </ul>
                     </div>
                     <div class="resp-tabs-container hor_1">
@@ -840,16 +841,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <img src="images/phone.jpg" class="img-responsive" alt="" />
             </div>
             <div class="col-md-6 phone-text">
-                <h4>Application mobile de paiement en ligne sur votre smartphone!</h4>
-                <p class="subtitle">Paiement Simple et Rapide</p>
+                <h4>Application pour simplifier vos services Airtel Money et MobiCash, Transférer de l'argent à l'international et reserver vos billets</h4>
+                <!--<p class="subtitle">Paiement Simple et Rapide</p>-->
                 <div class="text-1">
-                    <h5>Recharge</h5>
-                    <p>Recharge votre Mobile, Airtel, Moov, Azur, Libertis...</p>
-                    <p>Payer vos abonnement, Canal +, Ip9...</p>
+                    <h5>Services Mobiles</h5>
+                    <p>Recharge votre Mobile, Transfert d'argent, Services bancaires, Payer vos factures (SEEG), reabonnement canal+, IP9...</p>
                 </div>
                 <div class="text-1">
-                    <h5>Factures</h5>
-                    <p>Payer vos facture (Electricité, Eau, Gas etc...)</p>
+                    <h5>Achat des billets de transport et Transfert d'argent en France</h5>
+                    <p>Reserver et Acheter vos billets de transport et payer avec votre compte Airtel ou Mobicash.</p>
+					<p>Envoyer de l'argent en France depuis votre compte mobile</p>
                 </div>
                 <!--<div class="text-1">
 						<h5>Book Online</h5>
